# RSS-MCP

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  README_CN.md  README_zh-CN.md  SYSTEM_PROMPT.md  config.yaml  docker-compose.yml  pyproject.toml  start-backend.sh  start-frontend.sh
app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py  utils.py
app/mcp/: __init__.py  prompts.py  resources.py  tools.py
app/middleware/: auth.py
app/routers/: __init__.py  api_keys.py  articles.py  feeds.py  search.py  settings.py  sources.py
app/services/: __init__.py  content_extract.py  preset_loader.py  rss_fetcher.py  scheduler.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: index.ts
frontend/src/components/: ErrorBoundary.tsx  Layout.tsx  page-header.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  switch.tsx
frontend/src/hooks/: use-toast.ts
frontend/src/lib/: utils.ts
frontend/src/pages/: ApiKeys.tsx  Articles.tsx  Dashboard.tsx  Settings.tsx  Sources.tsx
presets/: sources.json
tests/: __init__.py  test_api.py  test_client.py  test_config.py  test_content_extract.py  test_rss_fetcher.py  test_services.py  test_stdio.py
