[project]
name = "rss-mcp"
version = "0.1.0"
description = "A MCP service for RSS feeds, designed for LLMs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "feedparser>=6.0.0",
    "trafilatura>=1.8.0",
    "sqlalchemy>=2.0.0",
    "apscheduler>=3.10.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
    "alembic>=1.13.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
rss-mcp = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python-version = "3.11"
